<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Omer</string>
    <string name="todaysreading">Today\'s Reading</string>
    <string name="allcards">All Cards</string>
    <string name="all_songs">All Songs</string>
    <string name="facebookvianame">via AHIMA Flash Cards</string>
    <string name="bookmarked_cards">Bookmarks and Notes</string>
    <string name="decksby_drugs">Blessings by Theme</string>
    <string name="app_header_text">Antibiotics Flash Cards</string>
    <string name="deleteallbookmarks">Clear All Bookmarks</string>
    <string name="deleteallproficiency">Delete All Proficiency</string>
    <string name="proficiency">Read:</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>

    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>
    <string name="Settings">Settings</string>
    <string name="deleteallcomments">Clear All Text Notes</string>
    <string name="deleteallvoicenotes">Clear All Voice Notes</string>
    <string name="resetapplication">Reset Application</string>
    <string name="randomizecards">Randomize Cards</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="title_activity_list_card_name">ListCardName</string>
    <string name="CHECK_FOR_VERSION">check_for_version</string>


    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed to get current location.</string>
    <string name="location_not_enabled">It seems your location service is disabled. Please enable from your device settings.</string>
    <string name="settings">Settings</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you to make entiries of your expense</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>
    <string name="Notify">Notification Recived</string>
    <string name="set_alarm">Set Alarm </string>


    <string name="file_provider_authority" translatable="false">com.spearheadinc.flashcards.omer.fileprovider</string>

</resources>